# PoNQ

./: .gitignore  LICENSE  README.md  demo.ipynb  demo_boundary.ipynb  demo_learning.ipynb  demo_learning_large.ipynb  demo_pc.ipynb  test_learning.ipynb
configs/: abc_cnn_multiple_quadrics_split_1.yaml  abc_cnn_multiple_quadrics_split_2.yaml  abc_cnn_multiple_quadrics_split_3 copy.yaml  abc_cnn_multiple_quadrics_split_3.yaml  direct_thingi.yaml  eval_cnn.yaml
cpp_utils/: CMakeLists.txt  self_intersect.cpp
direct_optimisation/: direct.ipynb  direct.py  direct_boundary.ipynb
representation/: PoNQ.py
src/: demo.ipynb  demo_boundary.ipynb  demo_learning.ipynb  direct.py  generate_all_CNN.py  train_cnn_multiple_quadrics_split.py
src/configs/: abc_cnn_multiple_quadrics_split_2.yaml  abc_cnn_multiple_quadrics_split_3.yaml
src/cpp_utils/: CMakeLists.txt  binvox
src/demos/: demo_boundary.ipynb  demo_learning.ipynb  demo_learning_large.ipynb  demo_optimization.ipynb
src/direct_optimisation/: direct.py
src/eval/: abc_ordered.txt  check_watertight.py  eval_ABC.py  eval_THINGI.py  eval_Template.py  eval_all.py  not_watertight_ABC_test.txt  watertight_thingi32_obj_list.txt
src/learning_based/: CNN_to_PoNQ_or_lite.py  SDF_CNN.py
src/utils/: ABC_dataset.py  CNN_to_PoNQ_or_lite.py  PoNQ.py  PoNQ_to_mesh.py  SDF_CNN.py  abc_watertight_train.txt  demo_boundary.ipynb  demo_learning.ipynb  direct.py  generate_mesh_CNN.py  mesh_tools.py  (+1 more)
suppl/: CNN_to_PoNQ_or_lite.py  PoNQ_to_mesh.py  SDF_CNN.py
utils/: PoNQ_to_mesh.py  mesh_tools.py
(+1 files in other folders)
